# brain-graph-agent

./: .env.example  .gitignore  README.md  bga_graph.sqlite  docker-compose.yml  pyproject.toml
bga/: cli.py  graph.py  graph_memory.py  llm.py  orchestrator.py  policy.py  server.py  settings.py  store_sqlite.py
bga/enrich/: __init__.py  extract.py  housekeep.py  normalize.py  pipeline.py  types.py
brain_graph_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
deploy/systemd/: brain-graph-agent-housekeep.service  brain-graph-agent-housekeep.timer
